--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bob Esponja - GIT</title>
+    <title>Bob Esponja - GITHUB</title>
     <link rel="stylesheet" href="bob.css">
 </head>
 <body>
@@ -67,6 +67,6 @@
     </div>
 
     <script src="persigueOjos.js"></script>
-    
+
 </body>
 </html>
